--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  BASE_URL: /${{ github.event.repository.name }}
+
 permissions:
   contents: read
   pages: write
@@ -22,25 +25,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          python-version: "3.11"
-          cache: "pip"
+          node-version: 18.x
 
-      - name: Install Jupyter Book (v2 / MyST)
-        run: |
-          pip install --upgrade pip
-          pip install jupyter-book
+      - name: Install MyST Markdown
+        run: npm install -g mystmd
 
-      - name: Build the site
-        run: |
-          jupyter-book build --site
+      - name: Build HTML Assets
+        run: myst build --html
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "_build/site"
+          path: "_build/html"
 
   deploy:
     environment:
