removed third seminair

--- a/myst.yml
+++ b/myst.yml
@@ -23,8 +23,8 @@ project:
           title: "1 · Environment Setup & Python Syntax"
         - file: docs/seminars/en/02_python_control_structures.ipynb
           title: "2 · Python Basics I: Control Structures"
-        - file: docs/seminars/en/03_python_data_structures.ipynb
-          title: "3 · Python Basics II: Data Structures"
+        # - file: docs/seminars/en/03_python_data_structures.ipynb
+        #   title: "3 · Python Basics II: Data Structures"
         # - file: docs/seminars/en/04_transfer_workshop.ipynb
         #   title: "4 · Transfer Workshop & Project Kickoff"
         # - file: docs/seminars/en/05_data_structures_impl.ipynb
@@ -57,8 +57,8 @@ project:
               title: "1 · Configuration & Syntaxe Python"
             - file: docs/seminars/fr/02_python_control_structures.ipynb
               title: "2 · Bases de Python I : Contrôle"
-            - file: docs/seminars/fr/03_python_data_structures.ipynb
-              title: "3 · Bases de Python II : Données"
+            # - file: docs/seminars/fr/03_python_data_structures.ipynb
+            #   title: "3 · Bases de Python II : Données"
             # - file: docs/seminars/fr/04_transfer_workshop.ipynb
             #   title: "4 · Atelier de transfert & Projet"
             # - file: docs/seminars/fr/05_data_structures_impl.ipynb
