--- a/myst.yml
+++ b/myst.yml
@@ -19,8 +19,12 @@ project:
       title: Home
     - title: Seminars
       children:
-        - file: docs/seminars/en/01_environment_setup.ipynb
-          title: "1 · Environment Setup & Python Syntax"
+        - file: docs/seminars/en/00_prequisits.ipynb
+          title: "0a · Python Setup from Scratch"
+        - file: docs/seminars/en/00_prequisits_git.ipynb
+          title: "0b · Git & GitHub from Scratch"
+        - file: docs/seminars/en/01_python_basics.ipynb
+          title: "1 · Python Basics"
         - file: docs/seminars/en/02_python_control_structures.ipynb
           title: "2 · Python Basics I: Control Structures"
         # - file: docs/seminars/en/03_python_data_structures.ipynb
@@ -53,8 +57,12 @@ project:
           title: "Accueil (FR)"
         - title: Séminaires
           children:
-            - file: docs/seminars/fr/01_environment_setup.ipynb
-              title: "1 · Configuration & Syntaxe Python"
+            - file: docs/seminars/fr/00_prequisits.ipynb
+              title: "0a · Python Setup from Scratch"
+            - file: docs/seminars/fr/00_prequisits_git.ipynb
+              title: "0b · Git & GitHub from Scratch"
+            - file: docs/seminars/fr/01_python_basics.ipynb
+              title: "1 · Python Basics"
             - file: docs/seminars/fr/02_python_control_structures.ipynb
               title: "2 · Bases de Python I : Contrôle"
             # - file: docs/seminars/fr/03_python_data_structures.ipynb
